# python-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  python-template.code-workspace
.devcontainer/: devcontainer.json  postCreate.sh
src/mypackage/: __init__.py  __main__.py  core.py
tests/: test_sample.py
