[project]
name = "python-template"
version = "0.1.0"
description = "Modern Python project template with uv, ruff, black, mypy, pytest"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
dev-dependencies = [
    "ruff>=0.5.0",
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.5.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
]

[tool.mypy]
strict = true
mypy_path = "src"
explicit_package_bases = true

[tool.pytest.ini_options]
pythonpath = ["src"]
